<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailSeriesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/detail_card"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/dark_blue"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/detail_card_inside"
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/avengers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:contentDescription="@string/image"
                        android:id="@+id/detail_iv_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/avengers"
                        android:scaleType="fitXY"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/detail_tv_title"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@id/detail_card_inside"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title"
                    android:textColor="@color/white"
                    style="@style/textTitle"/>

                <TextView
                    android:id="@+id/detail_tv_release"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@id/detail_card_inside"
                    app:layout_constraintTop_toBottomOf="@id/detail_tv_title"
                    tools:text="@string/release"
                    android:textColor="@color/white"
                    style="@style/textGenre"/>

                <TextView
                    android:id="@+id/detail_tv_genre"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@id/detail_card_inside"
                    app:layout_constraintTop_toBottomOf="@id/detail_tv_release"
                    tools:text="@string/genre"
                    android:textColor="@color/white"
                    style="@style/textGenre"/>

                <ImageView
                    android:id="@+id/detail_iv_fav_border"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_favorite_border_24_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/favorite" />

                <ImageView
                    android:id="@+id/detail_iv_fav"
                    android:visibility="gone"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_favorite_24_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/favorite" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:contentDescription="@string/image"
            android:id="@+id/bg_image"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avengers" />

        <ImageView
            android:contentDescription="@string/image"
            android:id="@+id/detail_iv_white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bottom_sheet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_card" />

        <ImageView
            android:contentDescription="@string/image"
            android:id="@+id/detail_iv_baseline"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baseline_remove_24"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/detail_iv_white"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/detail_tv_baseline"
            style="@style/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_iv_baseline"/>

        <TextView
            android:id="@+id/detail_tv_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textDescription"
            tools:text="@string/synopsis"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_tv_baseline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>