<resources>
    <string name="app_name">Movie_Jetpack</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>

    <string name="title">Judul</string>
    <string name="synopsis">Gambaran</string>
    <string name="movie">Film</string>
    <string name="tv_series">Tv Series</string>
    <string name="genre">Genre</string>
    <string name="movie_serries"><![CDATA[Movie & Series List]]></string>
    <string name="created">Created by : Akbar Adi Susanto</string>
    <string name="image">image</string>
    <string name="release">release</string>
    <string name="favorite">Favorite</string>
    <string name="message_undo">Tekan Kembali Untuk Mengembalikan</string>
    <string name="message_ok">Kembali</string>
    <string name="data_belum_ditambahkan">Data Belum Ditambahkan</string>
</resources>